refactor(miniapp): DOMA-9911 updated the miniapp according to the new template (#5083)
* refactor(miniapp): DOMA-9911 updated the miniapp according to the new template

* refactor(miniapp): DOMA-9911 add apps/miniapp to sonarcloud ignore

* refactor(miniapp): DOMA-9911 fix linter issues

* refactor(miniapp): DOMA-9911 update migration

* refactor(miniapp): DOMA-9911 update translations

* refactor(miniapp): DOMA-9911 try to fix sonarcloud duplicate issue

* refactor(miniapp): DOMA-9911 fix build error

* refactor(miniapp): DOMA-9911 fixes after rebase

* refactor(miniapp): DOMA-9911 fixes after rebase

--- a/apps/miniapp/package.json
+++ b/apps/miniapp/package.json
@@ -5,16 +5,23 @@
   "scripts": {
     "test": "jest",
     "prepare": "node ./bin/prepare.js",
-    "dev": "NODE_ENV=development yarn build:deps && node ./../../bin/run-keystone-app.js",
-    "debug": "node inspect node_modules/.bin/keystone dev --port 3001",
+    "dev": "yarn build:deps && yarn dev:start",
+    "dev:start": "node --trace-warnings ./../../bin/run-keystone-app.js",
+    "debug": "node inspect node_modules/.bin/keystone dev",
     "build:deps": "turbo build --filter=miniapp^... --filter=!condo",
-    "build": "keystone build",
+    "build": "cross-env PHASE=build keystone build",
     "start": "NODE_ENV=production node ./../../bin/run-keystone-app.js",
+    "worker": "cross-env PHASE=worker node worker.js",
     "kmigrator": "./../../bin/kmigrator.py",
     "makemigrations": "./../../bin/kmigrator.py makemigrations",
     "migrate": "./../../bin/kmigrator.py migrate",
-    "maketypes": "mkdir -p dist/admin && node ./../../bin/create-graphql-schema.js && graphql-codegen -c codegen.yaml",
-    "createschema": "./../../bin/createschema"
+    "migrate:down": "./../../bin/kmigrator.py down",
+    "migrate:unlock": "./../../bin/kmigrator.py unlock",
+    "maketypes:miniapp": "mkdir -p dist/admin && node ./../../bin/create-graphql-schema.js StitchSchemaMiddleware && graphql-codegen -c codegen.yaml",
+    "maketypes:condo": "node ./bin/generate-condo-schema.js && graphql-codegen -c condoCodegen.yaml",
+    "maketypes": "yarn maketypes:miniapp && yarn maketypes:condo",
+    "createschema": "./../../bin/createschema",
+    "createservice": "node ./../../bin/createservice"
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
@@ -29,6 +36,7 @@
     "@keystonejs/adapter-prisma": "^3.2.0",
     "@keystonejs/app-admin-ui": "^7.5.0",
     "@keystonejs/app-graphql": "^6.3.0",
+    "@keystonejs/app-graphql-playground": "^5.2.2",
     "@keystonejs/app-next": "^5.2.3",
     "@keystonejs/app-static": "^5.2.0",
     "@keystonejs/auth-password": "^6.1.0",
@@ -36,18 +44,17 @@
     "@keystonejs/fields-color": "^1.1.0",
     "@keystonejs/fields-content": "^9.1.0",
     "@keystonejs/fields-location-google": "^3.4.0",
+    "@keystonejs/fields-markdown": "^5.3.2",
     "@keystonejs/fields-wysiwyg-tinymce": "^5.4.0",
     "@keystonejs/file-adapters": "^7.1.0",
-    "@keystonejs/keystone": "19.3.4",
+    "@keystonejs/keystone": "^19.3.1",
     "@keystonejs/list-plugins": "^8.1.0",
     "@keystonejs/server-side-graphql-client": "^2.1.0",
     "@keystonejs/utils": "^6.1.0",
     "@miniapp/domains": "link:./domains",
     "@open-condo/bridge": "workspace:^",
-    "@open-condo/cli": "workspace:^",
     "@open-condo/codegen": "workspace:^",
     "@open-condo/config": "workspace:^",
-    "@open-condo/icons": "workspace:^",
     "@open-condo/keystone": "workspace:^",
     "@open-condo/next": "workspace:^",
     "@open-condo/ui": "workspace:^",
@@ -57,30 +64,29 @@
     "ajv": "8.11.0",
     "antd": "^4.24.12",
     "classnames": "2.2.6",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.10.6",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
     "express": "^4.17.1",
     "facepaint": "^1.2.1",
     "get-contrast": "^2.0.0",
-    "graphql": "^15.6.1",
-    "graphql-tag": "^2.12.6",
+    "graphql-upload": "^15.0.1",
     "immer": "9.0.13",
     "less": "^3.12.2",
     "lodash": "^4.17.21",
     "next": "^9.5.5",
     "next-transpile-modules": "^4.1.0",
     "numeral": "2.0.6",
-    "openid-client": "4.7.4",
-    "qs": "6.11.0",
+    "qs": "^6.9.4",
     "rc-queue-anim": "^1.8.5",
-    "rc-table": "~7.25.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fittext": "^1.0.0",
     "react-markdown": "^4.3.1",
     "react-responsive": "^8.1.0",
     "react-test-renderer": "^16.13.1",
+    "tslib": "^2.5.3",
     "use-immer": "^0.4.1",
     "uuid": "^8.3.0",
     "validator": "^13.1.1"
