--- a/apps/miniapp/tsconfig.json
+++ b/apps/miniapp/tsconfig.json
@@ -1,5 +1,8 @@
 {
+  "extends": "@open-condo/tsconfig/next-app.json",
   "compilerOptions": {
+    "declaration": false,
+    "declarationMap": false,
     "target": "ES6",
     "lib": [
       "dom",
@@ -9,15 +12,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "downlevelIteration": true
+    "incremental": false
   },
   "include": [
     "next-env.d.ts",
