hotfix(miniapp): remove miniapp schema.graphql from gitignore, run maketypes (#5361)

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ codegen.yaml
 
 schema.graphql
 !apps/condo/schema.graphql
+!apps/miniapp/schema.graphql
 !apps/dev-api/schema.graphql
 
 # yarn + npm
