--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -38,6 +38,7 @@
     "@keystonejs/utils": "^6.1.0",
     "@open-condo/config": "workspace:^",
     "@open-condo/locales": "workspace:^",
+    "ajv": "8.11.0",
     "apollo-errors": "^1.9.0",
     "apollo-server-errors": "^3.1.0",
     "apollo-upload-client": "^14.1.3",
@@ -72,6 +73,7 @@
     "ms": "^2.1.3",
     "next-cookies": "^2.0.3",
     "node-fetch": "^2.6.7",
+    "node-sql-parser": "^5.3.3",
     "ow": "^0.19.0",
     "pino": "^6.13.3",
     "react": "^16.13.1",
@@ -84,6 +86,7 @@
   },
   "repository": "https://github.com/open-condo-software/condo/tree/main/packages/keystone",
   "devDependencies": {
+    "@faker-js/faker": "^7",
     "babel-jest": "^29.7.0"
   }
 }
