--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,7 +34,7 @@
     "build:tokens": "yarn build:styles && yarn build:colors",
     "build:lib": "webpack --config webpack.prod.js && tsc --project tsconfig.prod.json",
     "build": "yarn build:tokens && yarn build:lib",
-    "build:sb": "yarn build:deps && yarn build:tokens && storybook build",
+    "build:sb": "storybook build",
     "dev": "yarn build:deps && yarn build:tokens && storybook dev -p 6006",
     "watch": "yarn build:deps && yarn build:tokens && webpack --config webpack.dev.js"
   },
