--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -17,6 +17,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@graphql-tools/graphql-file-loader": "^7.5.17",
+    "@graphql-tools/links": "^8.3.6",
+    "@graphql-tools/load": "^7.7.4",
+    "@graphql-tools/stitch": "^8.7.6",
+    "@graphql-tools/wrap": "^8.5.1",
     "@keystonejs/adapter-knex": "^13.2.0",
     "@keystonejs/adapter-mongoose": "^11.2.0",
     "@keystonejs/adapter-prisma": "^3.2.0",
