--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -22,9 +22,6 @@
     "./": "./"
   },
   "dependencies": {
-    "@graphql-tools/graphql-file-loader": "^7.5.5",
-    "@graphql-tools/load": "^7.8.12",
-    "@keystonejs/fields": "^22.1.3",
     "@open-condo/codegen": "workspace:^",
     "@open-condo/config": "workspace:^",
     "@open-condo/keystone": "workspace:^",
@@ -43,5 +40,10 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-jasmine2": "^29.7.0"
+  },
+  "peerDependencies": {
+    "@graphql-tools/graphql-file-loader": "^7.5.5",
+    "@graphql-tools/load": "^7.8.12",
+    "@keystonejs/fields": "^22.1.3"
   }
 }
