--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -81,6 +81,7 @@
     "node-sql-parser": "^5.3.3",
     "ow": "^0.19.0",
     "pino": "^6.13.3",
+    "pluralize": "^8",
     "react": "^16.13.1",
     "redlock": "^5.0.0-beta.2",
     "serialize-error": "^8.1.0",
