--- a/packages/clients/package.json
+++ b/packages/clients/package.json
@@ -10,6 +10,7 @@
     ],
     "dependencies": {
         "@open-condo/config": "workspace:^",
+        "@open-condo/keystone": "workspace:^",
         "dotenv": "^16.3.1"
     },
     "repository": "https://github.com/open-condo-software/condo/tree/main/packages/clients",
