feat(miniapp-utils): DOMA-10721 added collections helpers (#5518)
* feat(miniapp-utils): DOMA-10721 added collections helpers

* refactor(global): DOMA-10721 replaced app utils to package one

* refactor(global): DOMA-10721 replaced app utils to package one

--- a/packages/miniapp-utils/package.json
+++ b/packages/miniapp-utils/package.json
@@ -39,6 +39,9 @@
       "helpers/apollo": [
         "dist/types/helpers/apollo.d.ts"
       ],
+      "helpers/collections": [
+        "dist/types/helpers/collections.d.ts"
+      ],
       "helpers/environment": [
         "dist/types/helpers/environment.d.ts"
       ],
@@ -61,6 +64,11 @@
       "types": "./dist/types/helpers/apollo.d.ts",
       "require": "./dist/cjs/helpers/apollo.js",
       "import": "./dist/esm/helpers/apollo.js"
+    },
+    "./helpers/collections": {
+      "types": "./dist/types/helpers/collections.d.ts",
+      "require": "./dist/cjs/helpers/collections.js",
+      "import": "./dist/esm/helpers/collections.js"
     },
     "./helpers/environment": {
       "types": "./dist/types/helpers/environment.d.ts",
