--- a/packages/miniapp-utils/package.json
+++ b/packages/miniapp-utils/package.json
@@ -45,6 +45,9 @@
       "helpers/collections": [
         "dist/types/helpers/collections.d.ts"
       ],
+      "helpers/cookies": [
+        "dist/types/helpers/cookies.d.ts"
+      ],
       "helpers/environment": [
         "dist/types/helpers/environment.d.ts"
       ],
@@ -80,6 +83,11 @@
       "types": "./dist/types/helpers/collections.d.ts",
       "require": "./dist/cjs/helpers/collections.js",
       "import": "./dist/esm/helpers/collections.js"
+    },
+    "./helpers/cookies": {
+      "types": "./dist/types/helpers/cookies.d.ts",
+      "require": "./dist/cjs/helpers/cookies.js",
+      "import": "./dist/esm/helpers/cookies.js"
     },
     "./helpers/environment": {
       "types": "./dist/types/helpers/environment.d.ts",
