feat(keystone): DOMA-10642 custom field for encrypted text (#5450)
* feat(keystone): DOMA-10642 custom field for encrypted text

* fix(keystone): DOMA-10642 try avoid semgrep on README.md

* feat(condo): DOMA-10642 add script for re encryption. Changes in encrypted field

* feat(condo): DOMA-10642 enhance script. Simplify encryption

* fix(condo): DOMA-10642 fix semgrep

* fix(condo): DOMA-10642 remove unnecessary filters from script

* feat(condo): DOMA-10642 change interface for EncryptionManager

* feat(condo): DOMA-10642 add prefix to determine, that string was encrypted by manager; Do not encrypt field before database, if it is encrypted; Enhance script; Rename field;

* feat(keystone): support for gcm mode. Configurable compression and key derivation

* fix(keystone): remove converting to hex; avoid semgrep; update readme;

* fix(keystone): small changes; more secret key checking

* fix(keystone): small changes;

* fix(keystone): avoid semgrep

--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -13,7 +13,8 @@
     "./rateLimiting": "./rateLimiting/index.js",
     "./sentry": "./sentry/index.js",
     "./fileAdapter/": "./fileAdapter/",
-    "./*": "./*.js"
+    "./*": "./*.js",
+    "./crypto": "./crypto/index.js"
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
