--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -57,6 +57,7 @@
     "cuid": "^2.1.8",
     "dayjs": "^1.10.6",
     "debug": "^4.3.4",
+    "dumb-passwords": "^0.2.1",
     "emittery": "^0.7.1",
     "encoding": "^0.1.0",
     "ensure-error": "^3.0.1",
