--- a/apps/miniapp/package.json
+++ b/apps/miniapp/package.json
@@ -8,7 +8,7 @@
     "dev": "yarn build:deps && yarn dev:start",
     "dev:start": "node --trace-warnings ./../../bin/run-keystone-app.js",
     "debug": "node inspect node_modules/.bin/keystone dev",
-    "build:deps": "turbo build --filter=miniapp^... --filter=!condo",
+    "build:deps": "turbo build --filter=@app/miniapp^... --filter=!@app/condo",
     "build": "cross-env PHASE=build keystone build",
     "start": "NODE_ENV=production node ./../../bin/run-keystone-app.js",
     "worker": "cross-env PHASE=worker node worker.js",
