--- a/packages/codegen/templates/app00/package.json
+++ b/packages/codegen/templates/app00/package.json
@@ -8,7 +8,7 @@
     "dev": "yarn build:deps && yarn dev:start",
     "dev:start": "node --trace-warnings ./../../bin/run-keystone-app.js",
     "debug": "node inspect node_modules/.bin/keystone dev",
-    "build:deps": "turbo build --filter={{name}}^... --filter=!condo",
+    "build:deps": "turbo build --filter=@app/{{name}}^... --filter=!@app/condo",
     "build": "cross-env PHASE=build keystone build",
     "start": "NODE_ENV=production node ./../../bin/run-keystone-app.js",
     "worker": "cross-env PHASE=worker node worker.js",
