--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -133,6 +133,7 @@
     "lru-cache": "^7.18.3",
     "minimatch": "^5.1.1",
     "mjml": "^4.15.3",
+    "n2words": "^1.21.0",
     "nanoid": "^3.3.4",
     "next": "^9.5.5",
     "next-cookies": "^2.0.3",
