--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -7,6 +7,9 @@
     "keystone",
     "webhooks"
   ],
+  "scripts": {
+    "test": "jest"
+  },
   "version": "0.0.0-development",
   "repository": {
     "type": "git",
