--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -53,7 +53,8 @@
     "./dist/": "./dist/",
     "./style-vars/css": "./dist/style-vars/variables.css",
     "./style-vars/less": "./dist/style-vars/variables.less",
-    "./hooks": "./dist/hooks.js"
+    "./hooks": "./dist/hooks.js",
+    "./events": "./dist/events.js"
   },
   "typesVersions": {
     "*": {
@@ -62,6 +63,9 @@
       ],
       "colors": [
         "dist/colors/index.d.ts"
+      ],
+      "events": [
+        "dist/events.d.ts"
       ]
     }
   },
@@ -129,6 +133,7 @@
     "classnames": "^2.3.2",
     "react-markdown": "^6",
     "react-phone-input-2": "^2.15.1",
-    "remark-gfm": "^1"
+    "remark-gfm": "^1",
+    "zod": "^3.24.2"
   }
 }
