--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -88,6 +88,7 @@
     "amplitude-js": "^8.18.1",
     "antd": "^4.24.12",
     "antd-mask-input": "^0.1.15",
+    "aws-sdk": "^2.1692.0",
     "axios": "^0.26.0",
     "big.js": "^6.1.1",
     "body-parser": "^1.19.1",
