--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "mkdirp dist/admin && jest --unhandled-rejections=strict",
     "prepare": "node ./bin/prepare.js",
-    "dev": "yarn build:deps && NODE_ENV=development node --trace-warnings ./../../bin/run-keystone-app.js & yarn types:watch",
+    "dev": "yarn build:deps && cross-env NODE_OPTIONS=\"--max_old_space_size=6144\" NODE_ENV=development node --trace-warnings ./../../bin/run-keystone-app.js & yarn types:watch",
     "debug": "node inspect node_modules/.bin/keystone dev",
     "build:static": "yarn workspace @open-condo/ui build:sb -o ../../apps/condo/public/ui && mv -f public/ui/ui/* public/ui",
     "build:deps": "turbo build --filter=@app/condo^...",
