--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint:styles": "yarn run stylelint \"**/*.{less,css}\"",
     "lint:code:fix": "yarn run eslint --fix .",
     "lint:translations": "turbo run lint-translations",
+    "lint:dependencies": "knip --include dependencies",
     "lint": "yarn lint:code && yarn lint:styles && yarn lint:translations",
     "createapp": "node ./bin/createapp",
     "prepare": "husky install"
@@ -50,6 +51,7 @@
     "jest-diff": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-jasmine2": "^29.7.0",
+    "knip": "^4",
     "mono-pub": "^2.0.0",
     "node-fetch": "^2.6.7",
     "postcss": "^8.3.5",
