--- a/packages/featureflags/package.json
+++ b/packages/featureflags/package.json
@@ -8,7 +8,8 @@
     "@open-condo/keystone": "workspace:^",
     "@open-condo/miniapp-utils": "workspace:^",
     "@open-condo/next": "workspace:^",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "lodash": "^4.17.21"
   },
   "peerDependencies": {
     "next": ">=9.5.5",
