--- a/packages/keystone/package.json
+++ b/packages/keystone/package.json
@@ -39,6 +39,7 @@
     "@keystonejs/fields-color": "^1.1.0",
     "@keystonejs/fields-content": "^9.1.0",
     "@keystonejs/fields-location-google": "^3.4.0",
+    "@keystonejs/fields-markdown": "^5.3.2",
     "@keystonejs/fields-wysiwyg-tinymce": "^5.4.0",
     "@keystonejs/file-adapters": "^7.1.0",
     "@keystonejs/keystone": "^19.3.1",
@@ -47,10 +48,12 @@
     "@keystonejs/utils": "^6.1.0",
     "@open-condo/config": "workspace:^",
     "@open-condo/locales": "workspace:^",
+    "@sentry/node": "^6.19.7",
     "ajv": "8.11.0",
     "apollo-errors": "^1.9.0",
     "apollo-server-errors": "^3.1.0",
     "apollo-upload-client": "^14.1.3",
+    "aws-sdk": "^2.1692.0",
     "axios": "^0.21.2",
     "axios-cookiejar-support": "^1.0.1",
     "big.js": "^6.1.1",
@@ -67,15 +70,16 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
-    "falsey": "^1.0.0",
     "form-data": "^4.0.0",
     "graphql": "^15.6.1",
     "graphql-disable-introspection": "^1.2.0",
     "graphql-tag": "^2.12.6",
     "graphql-upload": "^15.0.2",
     "hot-shots": "^10.0.0",
+    "iconv-lite": "^0.6.3",
     "inflection": "^1.13.1",
     "ioredis": "^4.28.5",
+    "jschardet": "^3.0.0",
     "knex": "^0.95.6",
     "lodash": "^4.17.21",
     "lru-cache": "^7.18.3",
@@ -94,6 +98,7 @@
     "supertest": "^6.1.3",
     "tough-cookie": "^4.1.3",
     "uuid": "^8.3.0",
+    "validate.js": "^0.13.1",
     "validator": "^13.7.0"
   },
   "repository": "https://github.com/open-condo-software/condo/tree/main/packages/keystone",
