--- a/apps/address-service/package.json
+++ b/apps/address-service/package.json
@@ -19,16 +19,20 @@
   },
   "dependencies": {
     "@address-service/domains": "link:./domains",
+    "@apollo/client": "^3.11.8",
     "@keystonejs/app-admin-ui": "^7.5.0",
     "@open-condo/cli": "workspace:^",
     "@open-condo/codegen": "workspace:^",
     "@open-condo/config": "workspace:^",
+    "@open-condo/icons": "workspace:^",
     "@open-condo/keystone": "workspace:^",
     "express": "^4.17.1",
     "graphql": "^15.6.1",
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
     "openid-client": "4.7.4",
+    "react": "^16.13.1",
+    "react-router-dom": "5.2.0",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
