--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -99,6 +99,7 @@
     "carbone": "3.2.3",
     "classnames": "^2.2.6",
     "cookie-signature": "^1.2.2",
+    "cookies-next": "^4.2.1",
     "csv-parse": "^5.2.0",
     "csv-stringify": "^6.2.0",
     "cuid": "^2.1.8",
@@ -169,6 +170,7 @@
     "react-intl": "5.25.1",
     "react-phone-input-2": "^2.14.0",
     "react-progressive-image": "^0.6.0",
+    "react-router-dom": "5.2.0",
     "react-test-renderer": "^16.13.1",
     "react-yandex-metrika": "^2.6.0",
     "recheck": "^4.4.5",
@@ -222,6 +224,7 @@
     "jest-watch-typeahead": "0.6.5",
     "less-loader": "^4.0.0",
     "mkdirp": "^1.0.4",
+    "pg": "^8.11.3",
     "pluralize": "^8.0.0",
     "raw-loader": "^4.0.2",
     "typescript": "^5.5.4",
