--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -5,6 +5,7 @@
     "repository": "https://github.com/open-condo-software/condo/tree/main/packages/codegen",
     "dependencies": {
         "@apollo/client": "^3.11.8",
+        "@faker-js/faker": "^7.6.0",
         "@graphql-typed-document-node/core": "^3.1.1",
         "@open-condo/config": "workspace:^",
         "@open-condo/keystone": "workspace:^",
