--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@graphql-typed-document-node/core": "3.2.0",
     "@open-condo/apollo": "workspace:^",
     "@open-condo/miniapp-utils": "workspace:^",
     "apollo-upload-client": "^14.1.3",
@@ -18,6 +19,7 @@
     "react-intl": "5.25.1"
   },
   "devDependencies": {
+    "@formatjs/intl": "^2.2.1",
     "@open-condo/tsconfig": "workspace:^"
   },
   "exports": {
