--- a/apps/address-service/package.json
+++ b/apps/address-service/package.json
@@ -7,6 +7,7 @@
     "prepare": "node ./bin/prepare.js",
     "dev": "node ./../../bin/run-keystone-app.js",
     "debug": "node inspect node_modules/.bin/keystone dev",
+    "build:deps": "turbo build --filter=@app/address-service^...",
     "build": "keystone build",
     "start": "NODE_ENV=production node ./../../bin/run-keystone-app.js",
     "kmigrator": "./../../bin/kmigrator.py",
