--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -41,6 +41,7 @@
     "@keystonejs/server-side-graphql-client": "^2.1.0",
     "@metro-fs/analytics-plugin-posthog": "^1.14.0",
     "@open-condo/apollo": "workspace:^",
+    "@open-condo/billing": "workspace:^",
     "@open-condo/bridge": "workspace:^",
     "@open-condo/cli": "workspace:^",
     "@open-condo/codegen": "workspace:^",
